--- a/X-Ray Tomography.ipynb
+++ b/X-Ray Tomography.ipynb
@@ -305,6 +305,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Question 1\n",
+    "\n",
+    "Réécrivons l'expression de la rétroprojection sous la forme d'une intégrale.\n",
+    "\n",
+    "$\\tilde{f}(x,y) = \\frac{1}{\\pi} \\int_{0}^{\\pi} Rf(\\theta, xcos(\\theta) + ysin(\\theta)) d\\theta$\n",
+    "\n",
+    "Dans le cas où f est l'indicatrice d'un disque de rayon 1:\n",
+    "\n",
+    "Alors $f(x,y) = \\mathbb{1}_{[-1,1]}(x^2 + y^2) $\n",
+    "\n",
+    "Donc $Rf(\\theta, t) = \\int_{\\mathbb(R)} \\mathbb{1}_{[-1,1]}((t cos(\\theta) - \\rho sin(\\theta))^2+ (t sin(\\theta) + \\rho(cos\\theta))^2)d\\rho$\n",
+    "\n",
+    "$ = \\int_{\\mathbb(R)} \\mathbb{1}_{[-1,1]}(t^2+ \\rho ^2)d\\rho $\n",
+    "                    \n",
+    "$ = \\int_{\\mathbb(R)}\\mathbb{1}_{[-1, 1]}(t) \\mathbb{1}_{[-\\sqrt{1 - t^2},\\sqrt{1-t^2}]}(\\rho)d\\rho $\n",
+    "\n",
+    "$ = \\int_{-\\sqrt{1 - t^2}}^{\\sqrt{1 - t^2}} \\mathbb{1}_{[-1, 1]}(t)d\\rho $\n",
+    "\n",
+    "$ = \\mathbb{1}_{[-1, 1]}(t).2\\sqrt{1 - t^2}$\n",
+    "\n",
+    "\n",
+    "\n",
+    "On en déduit que \n",
+    "$\\tilde{f}(x,y) = \\frac{1}{\\pi} \\int_{0}^{\\pi} \\mathbb{1}_{[-1, 1]}(xcos(\\theta) + ysin(\\theta)). 2\\sqrt{1 - (xcos(\\theta) + ysin(\\theta))^2} d\\theta$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f3fb161",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "id": "21bd829a",
